# app/account/serializers.py
@@ -1,3 +1,4 @@
+import decimal as d
 from http import HTTPStatus
 
 import marshmallow as ma
@@ -26,16 +27,39 @@ class CreateAccountSchema(ma.Schema):
     person_id = ma.fields.Str(data_key="idPessoa")
 
 
+def raise_for_negative_or_zero_value(value: d.Decimal):
+    if value <= 0:
+        raise abort(
+            make_response(
+                jsonify(error="Depósito aceita penas valores positivos"),
+                HTTPStatus.BAD_REQUEST,
+            )
+        )
+
+
 class DepositSchema(ma.Schema):
     value = ma.fields.Decimal(required=True, data_key="valor")
 
     @ma.post_load
     def post_load(self, data, **_):
-        if data["value"] < 0:
-            raise abort(
-                make_response(
-                    jsonify(error="Depósito aceita penas valores positivos"),
-                    HTTPStatus.BAD_REQUEST,
-                )
-            )
+        raise_for_negative_or_zero_value(data["value"])
+        return data
+
+
+class BalanceResponse(ma.Schema):
+    balance = ma.fields.Number(data_key="saldo")
+    blocked = ma.fields.Bool(data_key="bloqueado")
+    withdraw_available = ma.fields.Number(data_key="limiteSaqueDisponivel")
+
+
+class BlockAccountSchema(ma.Schema):
+    block = ma.fields.Bool(required=True, data_key="bloquear")
+
+
+class WithdrawSchema(ma.Schema):
+    value = ma.fields.Decimal(data_key="valor")
+
+    @ma.post_load
+    def post_load(self, data, **_):
+        raise_for_negative_or_zero_value(data["value"])
         return data
